# Canadian-Regulatory-RAG

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: manifest.json
docs/debugging/: 2026-04-retrieval-ivfflat.md
eval/: eval_dataset.json
scripts/: init.sql
scripts/migrations/: 001_drop_ivfflat.sql
src/ingestion/: chunk.py  download.py  embed_and_index.py  extract.py
src/models/: schemas.py
src/pipeline/: cache.py  graph.py
src/pipeline/nodes/: citation_check.py  generate.py  inline_eval.py  query_rewrite.py  rerank.py  retrieve.py
src/pipeline/prompts/: generate.txt  inline_eval.txt  rewrite.txt
tests/: test_cache.py  test_generate.py  test_graph.py  test_inline_eval.py  test_query_rewrite.py  test_rerank.py  test_retrieve.py
