[project]
name = "canadian-regulatory-rag"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2.0",
    "langchain==0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "groq>=0.9.0",
    "langchain-groq>=0.2.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "sqlmodel>=0.0.21",
    "pgvector>=0.3.0",
    "pymupdf>=1.24.0",
    "tiktoken>=0.7.0",
    "instructor>=1.4.0",
    "pydantic>=2.7.0",
    "langfuse==2.60.0",
    "deepeval>=1.2.0",
    "ragas>=0.2.0",
    "dagster>=1.7.0",
    "dagster-webserver>=1.7.0",
    "dagster-postgres>=0.23.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "streamlit>=1.37.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
